// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component Should concat classname in props with Bulma classname 1`] = `
<table
  className="table other-class this-is-a-test"
>
  <p>
    Default
  </p>
</table>
`;

exports[`Table component Should create a scrollable table 1`] = `
<div
  className="table-container"
>
  <table
    className="table"
  >
    <tr />
  </table>
</div>
`;

exports[`Table component Should exist 1`] = `[Function]`;

exports[`Table component Should have table classname 1`] = `
<table
  className="table"
>
  Test 
  <a
    href="test"
  >
    Give me
  </a>
</table>
`;

exports[`Table component Should use inline styles 1`] = `
<table
  className="table"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</table>
`;
